manifests/argocd-ingress/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`argocd.blinde.net`)
      services:
        - name: argocd-server
          port: 443
  tls:
    passthrough: true
